# magnolia

./: .gitignore  .rbenv-vars  CMakeLists.txt  Gemfile  Makefile  README.md  TODO.md  build.gradle  main.go  run.sh  settings.gradle
app/: build.gradle
auth/: build.gradle
cms/: build.gradle
conf/: app.conf
conf/locales/: en-US.ini  zh-Hans.ini
config/: database.yml  secrets.yml
config/environments/: development.rb  production.rb
config/initializers/: devise.rb
controllers/: base.go  home.go  utils.go
controllers/admin/: controller.go
controllers/auth/: controller.go
controllers/forum/: controller.go
controllers/ops/: controller.go  nginx.go
controllers/reading/: controller.go
controllers/seo/: baidu.go  controller.go  google.go  robots.go  rss.go  sitemap.go
controllers/shop/: controller.go
db/: dbconf.yml  schema.rb
db/migrations/: 20161007094426_InitAuth.sql  20161007105717_InitSite.sql  20161007111428_InitForum.sql  20161007112544_InitReading.sql  20161007113530_InitShop.sql  20161007114446_InitOpsMail.sql
demo/: .gitignore  README.md  main.go
demo/locales/: en-US.toml  zh-Hans.toml
engines/auth/: engine.go  (+5 more)
env/: encrypt.go
mail/: build.gradle
models/: dao.go  encrypt.go  errors.go  random.go
reading/: build.gradle
routers/: router.go
shop/: build.gradle
src/: forum.cc  log.cc  log.hpp  log_test.cpp  main.cc  mall.cc  reading.cc  web.cc  web.hpp
tests/: default_test.go  encryptor_test.go
utils/: encryptor.go  encryptor_test.go  errors.go  random.go
vpn/: build.gradle
web/: config.go  encryptor_test.go  seo.go
(+128 files in other folders)
